--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
             Pour faciliter votre choix nous, vous proposons des offres en fonction des réseaux déployés par les opérateurs à proximité de votre adresse.
           </p>
           <p>
-            Data Advisor propose une carte de couverture pour suivre le déploiement de la fibre optique, de l'ADSL mais aussi de la 4G et de la 5G, en fonction de votre adresse.
+            Data Advisor propose une carte de couverture pour suivre le déploiement de la fibre optique, mais aussi de la 4G et de la 5G, en fonction de votre adresse.
           </p>
           <div>
             <a class="btn_home" href="#" routerLink="/carte">Commencer</a>
