--- a/src/app/newsletter/newsletter.component.html
+++ b/src/app/newsletter/newsletter.component.html
@@ -39,7 +39,7 @@
                        </p>
                     </div>
                     <img class="col-sm-6" src="{{host}}/{{article.image}}" alt="img not found"/>
-                    <div class="col">
+                    <div class="col mt-3">
                       <a href="{{article.url}}" class="btn btn-primary">plus de info</a>
                     </div>
                 </div>
