--- a/src/styles.css
+++ b/src/styles.css
@@ -219,3 +219,23 @@ hr{
   margin-bottom: 50px;
   border-top: 2px solid rgba(0,0,0,.1);
 }
+
+.btn_home{
+  background: #4B0CFF;
+  border-radius: 10px;
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: bold;
+  text-decoration:none;
+  padding-top: 10px;
+  padding-right: 50px;
+  padding-bottom: 10px;
+  padding-left: 50px;
+}
+
+.btn_home:hover{
+  text-decoration: none;
+  color: #FFFFFF;
+  background:#0275d8;
+}
+
